invalid json exception handling/test
